[package]
name = "trinci-sdk"
version = "0.2.4-rc1"
authors = ["The Trinci Team <trinci@affidaty.io>"]
edition = "2021"

[dependencies]
bs58 = "0.4.0"
sha2 = "0.9.5"
serde = { version = "1.0.126", features = ["derive"] }
rmp-serde = "0.15.4"
serde_bytes = "0.11.5"
serde-value = { git = "https://github.com/affidaty-blockchain/serde-value", branch = "helper_macro" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
lazy_static = "1.4.0"
hex = "0.4.3"
